--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 requests
 dataset
-thready
 readability-lxml
 feedparser
 nltk
-nltk_contrib
+git+git://github.com/nltk/nltk_contrib.git
+gensim
+psycopg2
+git+git://github.com/pudo/thready.git
+git+git://github.com/originell/jpype.git
+git+git://github.com/misja/python-boilerpipe.git
