--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@ dataset
 readability-lxml
 feedparser
 nltk
-git+git://github.com/nltk/nltk_contrib.git
 gensim
 psycopg2
+cssselect
+git+git://github.com/nltk/nltk_contrib.git
 git+git://github.com/pudo/thready.git
 git+git://github.com/originell/jpype.git
 git+git://github.com/misja/python-boilerpipe.git
