--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ git+git://github.com/pudo/thready.git
 git+git://github.com/originell/jpype.git
 git+git://github.com/misja/python-boilerpipe.git
 flask
+numpy
+decorator
